- introduced cart as a separate table - changes in controller and service to properly store cart items in the db